[tool.poetry]
name = "spotify"
version = "0.1.0"
description = ""
authors = ["cashmere53 <15913755+cashmere53@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.16.1"
rich = "^9.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
